--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "hatchling.build"
 
 [project]
 name = "python-muckrock" 
-version = "1.0.0"
+version = "2.0.0"
 authors = [
   { name="duckduckgrayduck", email="sanjin@muckrock.com" },
 ]
-description = "A simple Python wrapper for the MuckRock API"
+description = "A simple Python wrapper for the MuckRock API v2"
 readme = "README.md"
 requires-python = ">=3.7,<=3.12"
 classifiers = [
