--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint black ratelimit requests urllib3 python-squarelet python_dateutil
+        pip install pylint black ratelimit requests urllib3 python-squarelet python_dateutil pytest
 
     - name: Run Pylint on muckrock directory
       run: |
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
     env:
       MR_USER: ${{ secrets.MR_USER }}
       MR_PASSWORD: ${{ secrets.MR_PASSWORD }}
